--- a/package.json
+++ b/package.json
@@ -9,16 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.1",
+    "@types/file-saver": "^2.0.7",
+    "@types/jszip": "^3.4.0",
+    "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
+    "firebase": "^11.6.0",
+    "jszip": "^3.10.1",
+    "next": "15.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.5"
+    "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.2.0",
+    "uuid": "^11.1.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
