--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.1",
+    "@monaco-editor/react": "^4.7.0",
     "@types/file-saver": "^2.0.7",
     "@types/jszip": "^3.4.0",
     "classnames": "^2.5.1",
